# HHO-PACS

./: CMakeLists.txt  README.md
Mesh-Visualization/: CMakeLists.txt  visualization.cpp
Schemes/: CMakeLists.txt
Schemes/DDR-magnetostatics/: ddr-magnetostatics.cpp
Schemes/DDR-stokes/: ddr-stokes.cpp  ddr-stokes.hpp
Schemes/DDRCore/: basis-test.cpp  ddrcore-test.cpp  ddrcore-test.hpp  xcurl-test.cpp  xcurl-test.hpp  xdiv-test.cpp  xdiv-test.hpp  xgrad-test.cpp  xgrad-test.hpp
Schemes/HHO-diffusion/: HHO_Diffusion.hpp
Schemes/HHO-locvardiff/: HHO_LocVarDiff.hpp
Schemes/HHO-magnetostatics/: cartesianproducthhospace-test.cpp  hho-magnetostatics-alt.cpp  hho-magnetostatics-alt.hpp  hho-magnetostatics.cpp  hho-magnetostatics.hpp  xspace-alternative-faceBasis.cpp  xspace-alternative-faceBasis.hpp  xspace.cpp  xspace.hpp  yspace.cpp  yspace.hpp
runs/: directories.sh
runs/ddr-magnetostatics/: runseries.sh
runs/ddr-stokes/: data.sh  runseries.sh
runs/hho-diffusion/: compute_rates  runseries.sh
runs/hho-diffusion/outputs/: allrates.txt  mesh1_T-solution.vtu  mesh1_exact-solution.vtu  mesh1_solution.vtu  mesh2_T-solution.vtu  mesh2_exact-solution.vtu  mesh2_solution.vtu  mesh3_T-solution.vtu  mesh3_exact-solution.vtu  mesh3_solution.vtu  rates.aux  rates.tex  results-1.txt  results-2.txt  results-3.txt
runs/magnetostatics-spadotto/: bydegree.sh  compute_rates.cpp  data.sh  runseries.sh
spadotto-magnetostatics/: CMakeLists.txt  add-basis.hpp  cartesianproducthhospace.hpp  hho-magnetostatics-sum.cpp  hho-magnetostatics-sum.hpp  hhospace.cpp  hhospace.hpp  xspace-sum-byparts-evol.cpp  xspace-sum-evol.hpp
src/Common/: basis.cpp  basis.hpp  parallel_for.hpp  polynomialspacedimension.hpp
src/DDRCore/: xcurl.cpp  xcurl.hpp  xdiv.cpp  xdiv.hpp  xgrad.cpp  xgrad.hpp
